force-app/main/default/objects/JBT_RET_GENERAL_LEFT__x.object
<CustomObject>
    <fields>
        <fullName>AGE_YEARS__c</fullName>
        <description>Data sourced from PS_ASU_D_PERSON_VW PERS.PERS.AGE_YEARS</description>
        <externalDeveloperName>AGE_YEARS</externalDeveloperName>
        <label>Age</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>Data sourced from PS_ASU_D_PERSON_VW.PERSON_ID</description>
        <externalDeveloperName>EMPLID</externalDeveloperName>
        <label>Contact</label>
        <length>10</length>
        <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Demographic Data (external)</relationshipLabel>
        <relationshipName>Student_Demographic_Data_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>ETHNICITY__c</fullName>
        <description>Data sourced from PS_ASU_D_PERSON_VW.ASU_MINRTY_STAT_LD</description>
        <externalDeveloperName>ETHNICITY</externalDeveloperName>
        <label>Ethnicity</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIRST_GEN_FLG__c</fullName>
        <description>Data sourced from ASUDW.ASU_ADM_APPLICANT ADAPL.ADAPL.FIRST_GEN_FLG</description>
        <externalDeveloperName>FIRST_GEN_FLG</externalDeveloperName>
        <label>First Generation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <description>Data source script can be found here: https://docs.google.com/document/d/1BoG-WfksUyUOlQsSbtuOPdMoasBXjm9rd9cDFazt0mw/edit</description>
    <externalDataSource>asu_ps_lightning</externalDataSource>
    <externalName>JBT_RET_GENERAL_LEFT</externalName>
    <label>Student Demographic Data (external)</label>
    <pluralLabel>Student Demographic Data (external)</pluralLabel>
</CustomObject>